-- renamed classes -- rearranged code -- added lombok -- added datasource